# quoridor

./: .buildinfo  .gitignore  .pre-commit-config.yaml  A2C.py  Quoridor.py  README.md  README.rst  TODO.md  autoencode_state.py  genindex.html  graphic_quoridor.py  index.html  learning_script.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: documentation.yml  python-package.yml
_sources/api/: index_api.rst.txt  quoridor.board_state.rst.txt  quoridor.explore.rst.txt  quoridor.game.rst.txt  quoridor.play_game.rst.txt  quoridor.policy.rst.txt  quoridor.rst.txt  quoridor.scorer.rst.txt  quoridor.terminal_plotter.rst.txt
api/: index_api.html  quoridor.board_state.html  quoridor.explore.html  quoridor.game.html  quoridor.html  quoridor.play_game.html  quoridor.policy.html  quoridor.scorer.html  quoridor.terminal_plotter.html
app/: learning_script.py  learning_script_basic.py  play_game.py
doc/: Makefile  conf.py  index.rst
src/: mp_test.py
src/graphical/: __init__.py  graphic_quoridor.py
src/quoridor/: Quoridor.py  __init__.py  board_state.py  explore.py  game.py  graphic_quoridor.py  play_game.py  policy.py  scorer.py  terminal_plotter.py
src/reinforcement/: A2C.py  autoencode_state.py  learning_script_basic.py
tests/: test_bs.py  test_game.py
