[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quoridor"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "click",
    "numpy",
    "scipy"
]

[project.scripts]
quori = "quoridor.play_game:cli"

[project.optional-dependencies]
ml = ["tensorflow"]
x = ["matplotlib"]
all = ["tensorflow", "matplotlib"]
dev = ["pytest", "sphinx", "pydata-sphinx-theme"]

[tool.ruff]
line-length = 65

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN", "ANN101", "ANN102", "ERA001", "T201", "COM812", "ISC001", "D202", "D203", "D213", "S101"]
exclude = ["doc/conf.py", "tests/*", "src/reinforcement/*", "src/graphical/*", "app/*"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
