[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quoridor"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "click",
    "numpy",
    "scipy"
]

[project.scripts]
quori = "quoridor.play_game:cli"

[project.optional-dependencies]
ml = ["tensorflow"]
x = ["matplotlib"]
all = ["tensorflow", "matplotlib"]

[tool.ruff]
line-length = 65

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN", "ERA001", "T201", "COM812", "ISC001", "D202", "D203", "D213", "S101", "UP031"]
exclude = ["doc/conf.py", "tests/*", "src/reinforcement/*", "src/graphical/*", "app/*"]

[dependency-groups]
dev = [
    "pydata-sphinx-theme>=0.16.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "sphinx>=7.4.7",
]
